* (bug 11462) Fix typo in LanguageGetSpecialPageAliases hook name
* (bug 11474) Fix unintentional fall-through in math error handling
* (bug 11478) Fix undefined method call in file deletion interface
* (bug 278) Search results no longer highlight incorrect partial word matches
* Compatibility with incorrectly detected old-style DJVU mime types


=== API changes in 1.12 ===

Full API documentation is available at http://www.mediawiki.org/wiki/API

* (bug 11275) Enable descending sort in categorymembers
* (bug 11308) Allow the API to output the image metadata
* (bug 11296) Temporary fix for escaping of ampersands inside links in pretty-printed
  help document.
* (bug 11405) Expand templates implementation in the API
* (bug 11218) Add option to feedwatchlist to display multiple revisions for each page.
* (bug 11404) Provide name of exception caught in error code field of internal api 
  error messages.
* (bug 11534) rvendid doesn't work

=== Languages updated in 1.12 ===

* Amharic (am) (new)
* Arabic (ar)
* Mapudungun (arn) (new)
* Asturian (ast)
* Samogitian (bat-smg)
* Bikol Central (bcl)
* Belarusian Taraskievica orthography (be-tarask)
* Bulgarian (bg)
* Bislama (bi) (new)
* Bengali (bn)
* Bishnupriya Manipuri (bpy)
* Breton (br)
* Catalan (ca)
* Czech (cs)
* Cassubian (csb)
* Welsh (cy)
* Danish (da)
* German (de)
* Lower Sorbian (dsb) (new)
* Ewe (ee) (new)
* Greek (el)
* Spanish (es)
* Extremaduran (ext)
* Finnish (fi)
* Persian (fa)
* Võro (fiu-vro)
* Faroese (fo)
* Frisian (fy)
* French (fr)
* Cajun French (frc)
* Franco-Provençal (frp)
* Irish (ga)
* Gön-gnŷ (gan) (new)
* Galician (gl)
* Ancient Greek (grc) (new)
* Hakka (hak)
* Hebrew (he)
* Croatian (hr)
* Upper Sorbian (hsb)
* Indonesian (id)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Kazakh (kk)
* Korean (ko)
* Latin (la)
* Limbugian (li)
* Malay (ms)
* Nahuatl (nah)
* Low Saxon (nds)
* Dutch (nl)
* Norwegian (no)
* Portugese (pt)
* Romanian (ro)
* Russian (ru)
* Sakha (sah)
* Sicilian (scn)